# Gutea

./: LICENSE  README.md
src/: .rosinstall  .rosinstall.bak
src/dwa_local_planner/src/: dwa_planner_ros.cpp
src/gutea_brain/: CMakeLists.txt  goals.pkl  package.xml
src/gutea_brain/scripts/: Pipfile  algorithms.py  main.py
src/gutea_image_recognition/: CMakeLists.txt  Pipfile  package.xml
src/gutea_image_recognition/scripts/: main.py  main_bak.py  main_old.py  ml_model.py  test.py
src/gutea_msgs/: CMakeLists.txt  package.xml
src/gutea_msgs/msg/: ClassificationResult.msg
src/gutea_msgs/srv/: DoSpeech.srv
src/gutea_speech/: CMakeLists.txt  package.xml
src/gutea_speech/auth/: google_authentication.json
src/gutea_speech/scripts/: Pipfile  main.py  record_utils.py  speech_client.py
src/laser_to_pc/: CMakeLists.txt  package.xml
src/laser_to_pc/scripts/: laser_to_pc.py
src/robby_python/: CMakeLists.txt  package.xml
src/robby_python/scripts/: main.py
src/robby_python/scripts/speech/: client.py  google_authentication.json  record_utils.py  test.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: robot.launch  robot_3d_camera.launch  robot_core.launch  robot_lidar.launch  robot_remote.launch
src/robot_bringup/launch/includes/: description.launch.xml
src/robot_bringup/src/: robot_diagnostics.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/urdf/: turtlebot3_burger.urdf.xacro
src/robot_joy/: CMakeLists.txt  package.xml
src/robot_joy/config/: ps3.config.yaml  xbox.config.yaml
src/robot_joy/launch/: robot_joy.launch
src/robot_main_control/: CMakeLists.txt  mainpage.dox  package.xml
src/robot_main_control/include/robot_main_control/: main_window.hpp  qnode.hpp
src/robot_main_control/src/: main.cpp  main_window.cpp  qnode.cpp
src/robot_main_control/ui/: main_window.ui
src/robot_msgs/: CMakeLists.txt  DCmotorCommand.h  DCmotorStatus.h  IRsensor.h  Ultrasonic.h  package.xml
src/robot_msgs/msg/: DCmotorCommand.msg  DCmotorStatus.msg  IRsensor.msg  Ultrasonic.msg
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/launch/: amcl.launch.xml  robot_navigation.launch
src/robot_navigation/maps/: map (3번째 사본123).xcf  map (또 다른 사본).pgm  map (사본).pgm  map.pgm  map.yaml  map1.pgm  map2.pgm  map3.pgm  map4.pgm  map5.pgm  map7.pgm  map7.yaml  odododomap.pgm
src/robot_navigation/maps/backup_maps/: map.pgm
src/robot_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  parameter_set_0.txt  smoother.yaml
src/robot_navigation/param/slow_Succeed_set/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params (slow_succeed).yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  smoother.yaml
src/robot_slam/: CMakeLists.txt  package.xml
src/robot_slam/launch/: robot_slam .launch
src/robot_sound/: CMakeLists.txt  package.xml
src/robot_sound/src/: robot_sound_node.cpp
src/robot_tf/: CMakeLists.txt  package.xml
src/robot_tf/src/: robot_tf_node.cpp
