<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>0.2.1</version>
  <description>
    3D models of the robot for simulation and visualization
  </description>
  <license>BSD</license>
  <maintainer email="jy6659@rastech.co.kr">Jhung</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
