################################################################################
# CMake
################################################################################
cmake_minimum_required(VERSION 2.8.3)
project(robot_msgs)

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED COMPONENTS
  message_generation
  roscpp
  std_msgs
  sensor_msgs
  std_srvs
)

################################################################################
# Declare ROS messages, services and actions
################################################################################
add_message_files(
  FILES

  DCmotorCommand.msg
  DCmotorStatus.msg
  IRsensor.msg
  Ultrasonic.msg
)

add_service_files(
  DIRECTORY srv
  FILES
)


generate_messages(
  DEPENDENCIES
  std_msgs
  sensor_msgs
)

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Catkin specific configuration
################################################################################
catkin_package(
  CATKIN_DEPENDS std_msgs sensor_msgs std_srvs message_runtime
)

################################################################################
# Build
################################################################################

################################################################################
# Install
################################################################################

################################################################################
# Test
################################################################################
