<?xml version="1.0"?>

<package>

  <name>robot_navigation</name>
  <version>0.0.1</version>
  <description>The robot_navigation package</description>

  <maintainer email="jy6659@rastech.co.kr">Jhung</maintainer>



  <license>The MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>



  <export>
  </export>

</package>
